objects/Campaign_Products__c.object
<CustomObject>
    <description>Object to store Product from PIS Tree into the Campaign</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <globalPicklist>Business_Unit</globalPicklist>
        <label>Business Unit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Product__c</fullName>
        <description>R7 - Unique check</description>
        <label>Campaign &amp; Product</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Products</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <globalPicklist>Division</globalPicklist>
        <label>Division</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group_FULL__c</fullName>
        <description>Product Group Description and code</description>
        <formula>Product__r.Related_Product_Group__r.Product_Group_Full__c</formula>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+  Id  ,   Product__r.Name, &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Searched Product in the SFDC</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Campaign Products</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Campaign_Products__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Campaign Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Campaign Product</label>
    <nameField>
        <displayFormat>Campaign Product-{000000}</displayFormat>
        <label>Campaign Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>